--- a/.github/workflows/CI-CD-Pipeline.yml
+++ b/.github/workflows/CI-CD-Pipeline.yml
@@ -54,6 +54,62 @@
 #         with:
 #           category: "/language:${{ matrix.language }}"
 
+# name: CI CD pipeline
+# run-name: Build, Deploy, Test - from user @${{ github.actor }}
+
+# on:
+#   workflow_dispatch:
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.x'
+
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; fi
+
+#       - name: Run Unit Tests
+#         run: |
+#           pytest --maxfail=1 --disable-warnings -q
+
+#   analyze:
+#     name: Analyze
+#     runs-on: ubuntu-latest
+#     permissions:
+#       actions: read
+#       contents: read
+#       security-events: write
+
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         language: [ 'python' ]  # Set to 'python' since we're focusing on Python
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+
+#       - name: Initialize CodeQL
+#         uses: github/codeql-action/init@v2
+#         with:
+#           languages: ${{ matrix.language }}
+
+#       - name: Autobuild
+#         uses: github/codeql-action/autobuild@v2
+
+#       - name: Perform CodeQL Analysis
+#         uses: github/codeql-action/analyze@v2
+#         with:
+#           category: "/language:${{ matrix.language }}"
+
 name: CI CD pipeline
 run-name: Build, Deploy, Test - from user @${{ github.actor }}
 
@@ -74,11 +130,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; fi
+          pip install -r requirements.txt  # Ensure this step installs all dependencies including pytest
+
+      - name: Install pytest
+        run: |
+          pip install pytest  # Install pytest if it's not listed in requirements.txt
 
       - name: Run Unit Tests
         run: |
-          pytest --maxfail=1 --disable-warnings -q
+          pytest --maxfail=1 --disable-warnings -q  # Run pytest with the specified options
 
   analyze:
     name: Analyze
@@ -109,6 +169,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
+
 
 
         
