--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,27 @@ iniconfig
 lml                   
 numpy                 
 outcome              
+package_name          
+packaging            
+pip                  
+pluggy                
+pycparser             
+pyexcel               
+pyexcel-io            
+pypiwin32             
+PySocks               
+pytest                
+pytest-xdist        
+pyttsx3               
+pywin32               
+PyYAML                
+selenium              
+sniffio               
+sortedcontainers      
+texttable             
+trio                  
+trio-websocket        
+typing_extensions     
+urllib3               
+websocket-client      
+wsproto               
